--- a/perfil.html
+++ b/perfil.html
@@ -16,7 +16,7 @@
                 <ul class="na">
                     <li><a href="perfil.html" id="tex">Samuel</a>
                         <ul>
-                            <li><a href="../inicio.html">Cerrar Sesion</a></li>
+                            <li><a href="index.html">Cerrar Sesion</a></li>
                         </ul>
                     </li>
                 </ul>   
