--- a/modulos/vitate/curriculum.html
+++ b/modulos/vitate/curriculum.html
@@ -122,7 +122,7 @@
 					</div>
 				</div>
 				<div id="derecho">
-					<p>Exelete...</p>
+					<p>Exelente...</p>
 				</div>
 			</div>
 			<div id="text">
