--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en"> 
 <head>
-    <title>DevBlog - Bootstrap 5 Blog Template For Developers</title>
+    <title>Mi perfil</title>
     
     <!-- Meta -->
     <meta charset="utf-8">
@@ -48,7 +48,7 @@
 				
 				<ul class="navbar-nav flex-column text-start">
 					<li class="nav-item">
-					    <a class="nav-link" href="index.html"><i class="fas fa-home fa-fw me-2"></i>Inicio <span class="sr-only">(current)</span></a>
+					    <a class="nav-link" href="index.html"><i class="fas fa-home fa-fw me-2"></i>Inicio <span class="sr-only"></span></a>
 					</li>
 					<li class="nav-item">
 					    <a class="nav-link" href="blog-post.html"><i class="fas fa-bookmark fa-fw me-2"></i>Certificaciones</a>
